Oops, path got screwed up.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <body>
 <div id="container" style="width:100%; height:400px;"></div>
 </body>
-<script src="/static/highcharts/js/highcharts.js"></script>
+<script src="/static/highcharts.js"></script>
 <script type="text/javascript">
     $(function () {
         $('#container').highcharts({
