Minor refactor before calling it a night. Also don't need to check in this data, thought I might for the gh-pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,10 @@
 
 </head>
 <body>
-    <h1>St Louis Technology Jobs</h1>
+<a href="https://github.com/jakecoffman/stl-tech-jobs">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
+</a>
+<h1>St Louis Technology Jobs</h1>
     <p>Select your chart:</p>
     <ul>
         <li><a href="/charts/lang-by-date">Amount of job postings by date/language</a></li>
