one more, top languages

--- a/templates/job_lang_by_date.html
+++ b/templates/job_lang_by_date.html
@@ -10,6 +10,7 @@
     $(function () {
         $('#container').highcharts({
             chart: {
+                zoomType: 'x',
                 type: 'spline'
             },
             title: {
